# SmallWatch

./: .gitignore  README.md
Display/: clock.js  index.html
pico/g_watch/: CMakeLists.txt  clock.c  clock.h  lcd_driver.c  lcd_driver.h  lv_conf.h  main.c  pico_sdk_import.cmake
test/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  simulator.c
